# Adafruit_Blinka_PyPortal

./: .pre-commit-config.yaml  .pylintrc  README.md  README.rst  adafruit_pyportal.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
adafruit_pyportal/: __init__.py  graphics.py  network.py  peripherals.py  wifi.py
docs/: conf.py  examples.rst  index.rst
examples/: adafruit_blinka_pyportal_bitcoin.py  adafruit_blinka_pyportal_discord.py  adafruit_blinka_pyportal_nasa.py  adafruit_blinka_pyportal_openweather.py  adafruit_blinka_pyportal_openweather_graphics.py  adafruit_blinka_pyportal_quote.py
