# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-blinka-pyportal"
description = "A port of the PyPortal library intended to run on Blinka in CPython"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/adafruit/Adafruit_Blinka_Displayio.git"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "pyportal",
    "displayio",
    "touchscreen",
    "network",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["adafruit_pyportal"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
